corpus/scikit-learn/1.3.0/whats_new/v1.3.md
.. _changes_1_3:

Version 1.3.0
=============

**June 2023**

For a short description of the main highlights of the release, please refer to

Changed models
--------------

The following estimators and functions, when fit with the same data and
parameters, may produce different models from the previous version. This often
occurs due to changes in the modelling logic (bug fixes or enhancements), or in
random sampling procedures.

- |Enhancement| :meth:`multiclass.OutputCodeClassifier.predict` now uses a more
  efficient pairwise distance reduction. As a consequence, the tie-breaking
  strategy is different and thus the predicted labels may be different.

- |Enhancement| The `fit_transform` method of :class:`decomposition.DictionaryLearning`
  is more efficient but may produce different results as in previous versions when
  `transform_algorithm` is not the same as `fit_algorithm` and the number of iterations
  is small. :pr:`24871` by :user:`Omar Salman <OmarManzoor>`.

- |Enhancement| The `sample_weight` parameter now will be used in centroids
  initialization for :class:`cluster.KMeans`, :class:`cluster.BisectingKMeans`
  and :class:`cluster.MiniBatchKMeans`.
  This change will break backward compatibility, since numbers generated
  from same random seeds will be different.

- |Fix| Treat more consistently small values in the `W` and `H` matrices during the
  `fit` and `transform` steps of :class:`decomposition.NMF` and

  versions. :pr:`25438` by :user:`Yotam Avidar-Constantini <yotamcons>`.

- |Fix| :class:`decomposition.KernelPCA` may produce different results through
  `inverse_transform` if `gamma` is `None`. Now it will be chosen correctly as
  `1/n_features` of the data that it is fitted on, while previously it might be
  incorrectly chosen as `1/n_features` of the data passed to `inverse_transform`.
  A new attribute `gamma_` is provided for revealing the actual value of `gamma`
  used each time the kernel is called.

Changed displays
----------------

- |Enhancement| :class:`model_selection.LearningCurveDisplay` displays both the
  train and test curves by default. You can set `score_type="test"` to keep the
  past behaviour.

Changes impacting all modules
-----------------------------

- |Enhancement| The `get_feature_names_out` method of the following classes now
  raises a `NotFittedError` if the instance is not fitted. This ensures the error is
  consistent in all estimators with the `get_feature_names_out` method.

  - :class:`impute.MissingIndicator`
  - :class:`feature_extraction.DictVectorizer`
  - :class:`feature_extraction.text.TfidfTransformer`
  - :class:`feature_selection.GenericUnivariateSelect`
  - :class:`feature_selection.RFE`
  - :class:`feature_selection.RFECV`
  - :class:`feature_selection.SelectFdr`
  - :class:`feature_selection.SelectFpr`
  - :class:`feature_selection.SelectFromModel`
  - :class:`feature_selection.SelectFwe`
  - :class:`feature_selection.SelectKBest`
  - :class:`feature_selection.SelectPercentile`
  - :class:`feature_selection.SequentialFeatureSelector`
  - :class:`feature_selection.VarianceThreshold`
  - :class:`kernel_approximation.AdditiveChi2Sampler`
  - :class:`impute.IterativeImputer`
  - :class:`impute.KNNImputer`
  - :class:`impute.SimpleImputer`
  - :class:`isotonic.IsotonicRegression`
  - :class:`preprocessing.Binarizer`
  - :class:`preprocessing.KBinsDiscretizer`
  - :class:`preprocessing.MaxAbsScaler`
  - :class:`preprocessing.MinMaxScaler`
  - :class:`preprocessing.Normalizer`
  - :class:`preprocessing.OrdinalEncoder`
  - :class:`preprocessing.PowerTransformer`
  - :class:`preprocessing.QuantileTransformer`
  - :class:`preprocessing.RobustScaler`
  - :class:`preprocessing.SplineTransformer`
  - :class:`preprocessing.StandardScaler`
  - :class:`random_projection.GaussianRandomProjection`
  - :class:`random_projection.SparseRandomProjection`

  The `NotFittedError` displays an informative message asking to fit the instance
  with the appropriate arguments.

  by :user:`John Pangas <jpangas>`, :user:`Rahil Parikh <rprkh>` ,
  and :user:`Alex Buzenet <albuzenet>`.

- |Enhancement| Added a multi-threaded Cython routine to the compute squared
  Euclidean distances (sometimes followed by a fused reduction operation) for a
  pair of datasets consisting of a sparse CSR matrix and a dense NumPy.

  This can improve the performance of following functions and estimators:

  - :func:`sklearn.metrics.pairwise_distances_argmin`
  - :func:`sklearn.metrics.pairwise_distances_argmin_min`
  - :class:`sklearn.cluster.AffinityPropagation`
  - :class:`sklearn.cluster.Birch`
  - :class:`sklearn.cluster.MeanShift`
  - :class:`sklearn.cluster.OPTICS`
  - :class:`sklearn.cluster.SpectralClustering`
  - :func:`sklearn.feature_selection.mutual_info_regression`
  - :class:`sklearn.neighbors.KNeighborsClassifier`
  - :class:`sklearn.neighbors.KNeighborsRegressor`
  - :class:`sklearn.neighbors.RadiusNeighborsClassifier`
  - :class:`sklearn.neighbors.RadiusNeighborsRegressor`
  - :class:`sklearn.neighbors.LocalOutlierFactor`
  - :class:`sklearn.neighbors.NearestNeighbors`
  - :class:`sklearn.manifold.Isomap`
  - :class:`sklearn.manifold.LocallyLinearEmbedding`
  - :class:`sklearn.manifold.TSNE`
  - :func:`sklearn.manifold.trustworthiness`
  - :class:`sklearn.semi_supervised.LabelPropagation`
  - :class:`sklearn.semi_supervised.LabelSpreading`

  A typical example of this performance improvement happens when passing a sparse
  CSR matrix to the `predict` or `transform` method of estimators that rely on
  a dense NumPy representation to store their fitted parameters (or the reverse).

  For instance, :meth:`sklearn.NearestNeighbors.kneighbors` is now up to 2 times faster
  for this case on commonly available laptops.

- |Enhancement| All estimators that internally rely on OpenMP multi-threading
  (via Cython) now use a number of threads equal to the number of physical
  (instead of logical) cores by default. In the past, we observed that using as
  many threads as logical cores on SMT hosts could sometimes cause severe
  performance problems depending on the algorithms and the shape of the data.
  Note that it is still possible to manually adjust the number of threads used
  by OpenMP as documented in :ref:`parallelism`.

Experimental / Under Development
--------------------------------

- |MajorFeature| :ref:`Metadata routing <metadata_routing>`'s related base
  methods are included in this release. This feature is only available via the
  `enable_metadata_routing` feature flag which can be enabled using

  feature is mostly useful for third party developers to prepare their code
  base for metadata routing, and we strongly recommend that they also hide it
  behind the same feature flag, rather than having it enabled by default.

Changelog
---------

..
    Entries should be grouped by module (in alphabetic order) and prefixed with
    one of the labels: |MajorFeature|, |Feature|, |Efficiency|, |Enhancement|,
    |Fix| or |API| (see whats_new.rst for descriptions).
    Entries should be ordered by those labels (e.g. |Fix| after |Efficiency|).
    Changes not specific to a module should be listed under *Multiple Modules*
    or *Miscellaneous*.
    Entries should end with:

    where 123456 is the *pull request* number, not the issue number.

..............

- |Feature| Added a new option `skip_parameter_validation`, to the function

  allows to skip the validation of the parameters passed to the estimators and public
  functions. This can be useful to speed up the code but should be used with care
  because it can lead to unexpected behaviors or raise obscure error messages when
  setting invalid parameters.

...................

- |Feature| A `__sklearn_clone__` protocol is now available to override the
  default behavior of :func:`base.clone`. :pr:`24568` by `Thomas Fan`_.

- |Fix| :class:`base.TransformerMixin` now currently keeps a namedtuple's class
  if `transform` returns a namedtuple. :pr:`26121` by `Thomas Fan`_.

..........................

- |Fix| :class:`calibration.CalibratedClassifierCV` now does not enforce sample
  alignment on `fit_params`. :pr:`25805` by `Adrin Jalali`_.

......................

- |MajorFeature| Added :class:`cluster.HDBSCAN`, a modern hierarchical density-based
  clustering algorithm. Similarly to :class:`cluster.OPTICS`, it can be seen as a
  generalization of :class:`cluster.DBSCAN` by allowing for hierarchical instead of flat
  clustering, however it varies in its approach from :class:`cluster.OPTICS`. This
  algorithm is very robust with respect to its hyperparameters' values and can
  be used on a wide variety of data without much, if any, tuning.

  This implementation is an adaptation from the original implementation of HDBSCAN in
  `scikit-learn-contrib/hdbscan <https://github.com/scikit-learn-contrib/hdbscan>`_,
  by :user:`Leland McInnes <lmcinnes>` et al.

- |Enhancement| The `sample_weight` parameter now will be used in centroids
  initialization for :class:`cluster.KMeans`, :class:`cluster.BisectingKMeans`
  and :class:`cluster.MiniBatchKMeans`.
  This change will break backward compatibility, since numbers generated
  from same random seeds will be different.

- |Fix| :class:`cluster.KMeans`, :class:`cluster.MiniBatchKMeans` and

  and `init` being an array-like, running one initialization in that case.

- |API| The `sample_weight` parameter in `predict` for

  is now deprecated and will be removed in v1.5.

- |API| The `Xred` argument in :func:`cluster.FeatureAgglomeration.inverse_transform`
  is renamed to `Xt` and will be removed in v1.5. :pr:`26503` by `Adrin Jalali`_.

......................

- |Fix| :class:`compose.ColumnTransformer` raises an informative error when the individual
  transformers of `ColumnTransformer` output pandas dataframes with indexes that are
  not consistent with each other and the output is configured to be pandas.

- |Fix| :class:`compose.ColumnTransformer` correctly sets the output of the
  remainder when `set_output` is called. :pr:`26323` by `Thomas Fan`_.

.........................

- |Fix| Allows `alpha=0` in :class:`covariance.GraphicalLasso` to be
  consistent with :func:`covariance.graphical_lasso`.

- |Fix| :func:`covariance.empirical_covariance` now gives an informative
  error message when input is not appropriate.

- |API| Deprecates `cov_init` in :func:`covariance.graphical_lasso` in 1.3 since
  the parameter has no effect. It will be removed in 1.5.

- |API| Adds `costs_` fitted attribute in :class:`covariance.GraphicalLasso` and

- |API| Adds `covariance` parameter in :class:`covariance.GraphicalLasso`.

- |API| Adds `eps` parameter in :class:`covariance.GraphicalLasso`,

.......................

- |Enhancement| Allows to overwrite the parameters used to open the ARFF file using
  the parameter `read_csv_kwargs` in :func:`datasets.fetch_openml` when using the
  pandas parser.

- |Fix| :func:`datasets.fetch_openml` returns improved data types when
  `as_frame=True` and `parser="liac-arff"`. :pr:`26386` by `Thomas Fan`_.

- |Fix| Following the ARFF specs, only the marker `"?"` is now considered as a missing
  values when opening ARFF files fetched using :func:`datasets.fetch_openml` when using
  the pandas parser. The parameter `read_csv_kwargs` allows to overwrite this behaviour.

- |Fix| :func:`dataasets.fetch_openml` will consistenly use `np.nan` as missing marker
  with both parsers `"pandas"` and `"liac-arff"`.

- |API| The `data_transposed` argument of :func:`datasets.make_sparse_coded_signal`
  is deprecated and will be removed in v1.5.

............................

- |Efficiency| :class:`decomposition.MiniBatchDictionaryLearning` and

  avoiding duplicate validations.

- |Enhancement| :class:`decomposition.DictionaryLearning` now accepts the parameter
  `callback` for consistency with the function :func:`decomposition.dict_learning`.

- |Fix| Treat more consistently small values in the `W` and `H` matrices during the
  `fit` and `transform` steps of :class:`decomposition.NMF` and

  versions. :pr:`25438` by :user:`Yotam Avidar-Constantini <yotamcons>`.

- |API| The `W` argument in :func:`decomposition.NMF.inverse_transform` and

  will be removed in v1.5. :pr:`26503` by `Adrin Jalali`_.

....................................

- |Enhancement| :class:`discriminant_analysis.LinearDiscriminantAnalysis` now
  supports the `PyTorch <https://pytorch.org/>`__. See

.......................

- |Feature| :class:`ensemble.HistGradientBoostingRegressor` now supports
  the Gamma deviance loss via `loss="gamma"`.
  Using the Gamma deviance as loss function comes in handy for modelling skewed
  distributed, strictly positive valued targets.

- |Feature| Compute a custom out-of-bag score by passing a callable to

- |Feature| :class:`ensemble.GradientBoostingClassifier` now exposes
  out-of-bag scores via the `oob_scores_` or `oob_score_` attributes.

- |Efficiency| :class:`ensemble.IsolationForest` predict time is now faster
  (typically by a factor of 8 or more). Internally, the estimator now precomputes
  decision path lengths per tree at `fit` time. It is therefore not possible
  to load an estimator trained with scikit-learn 1.2 to make it predict with
  scikit-learn 1.3: retraining with scikit-learn 1.3 is required.

- |Efficiency| :class:`ensemble.RandomForestClassifier` and

  recomputes out-of-bag scores when there are actually more `n_estimators`
  in subsequent `fit` calls.

- |Enhancement| :class:`ensemble.BaggingClassifier` and

  underlying estimator. :pr:`25506` by `Thomas Fan`_.

- |Fix| :meth:`ensemble.RandomForestClassifier.fit` sets `max_samples = 1`
  when `max_samples` is a float and `round(n_samples * max_samples) < 1`.

- |Fix| :meth:`ensemble.IsolationForest.fit` no longer warns about missing
  feature names when called with `contamination` not `"auto"` on a pandas
  dataframe.

- |Fix| :class:`ensemble.HistGradientBoostingRegressor` and

  categorical features consistently as missing values, following LightGBM's and
  pandas' conventions.

- |Fix| Fix deprecation of `base_estimator` in :class:`ensemble.AdaBoostClassifier`
  and :class:`ensemble.AdaBoostRegressor` that was introduced in :pr:`23819`.

.........................

- |Feature| Added :class:`exceptions.InconsistentVersionWarning` which is raised
  when a scikit-learn estimator is unpickled with a scikit-learn version that is
  inconsistent with the sckit-learn version the estimator was pickled with.

.................................

- |API| :class:`feature_extraction.image.PatchExtractor` now follows the
  transformer API of scikit-learn. This class is defined as a stateless transformer
  meaning that it is note required to call `fit` before calling `transform`.
  Parameter validation only happens at `fit` time.

................................

- |Enhancement| All selectors in :mod:`sklearn.feature_selection` will preserve
  a DataFrame's dtype when transformed. :pr:`25102` by `Thomas Fan`_.

- |Fix| :class:`feature_selection.SequentialFeatureSelector`'s `cv` parameter
  now supports generators. :pr:`25973` by `Yao Xiao <Charlie-XIAO>`.

.....................

- |Enhancement| Added the parameter `fill_value` to :class:`impute.IterativeImputer`.

- |Fix| :class:`impute.IterativeImputer` now correctly preserves the Pandas
  Index when the `set_config(transform_output="pandas")`. :pr:`26454` by `Thomas Fan`_.

.........................

- |Enhancement| Added support for `sample_weight` in

  weighted averaging when aggregating for each value of the grid we are making the
  inspection on. The option is only available when `method` is set to `brute`.

- |API| :func:`inspection.partial_dependence` returns a :class:`utils.Bunch` with
  new key: `grid_values`. The `values` key is deprecated in favor of `grid_values`
  and the `values` key will be removed in 1.5.

...........................

- |Efficiency| Avoid data scaling when `sample_weight=None` and other
  unnecessary data copies and unexpected dense to sparse data conversion in

- |Enhancement| :class:`linear_model.SGDClassifier`,

  now preserve dtype for `numpy.float32`.

- |Enhancement| The `n_iter_` attribute has been included in

  required to reach the stopping criterion.

- |Fix| Use a more robust criterion to detect convergence of

  on linearly separable problems.

- |Fix| Fix a crash when calling `fit` on

  which failed to inspect the state of the model prior to the first parameter update.

- |API| Deprecates `n_iter` in favor of `max_iter` in

  `n_iter` will be removed in scikit-learn 1.5. This change makes those
  estimators consistent with the rest of estimators.

.......................

- |Fix| :class:`manifold.Isomap` now correctly preserves the Pandas
  Index when the `set_config(transform_output="pandas")`. :pr:`26454` by `Thomas Fan`_.

......................

- |Feature| Adds `zero_division=np.nan` to multiple classification metrics:

  zero division, the metric is undefined and is excluded from averaging. When not used
  for averages, the value returned is `np.nan`.

- |Feature| :func:`metrics.average_precision_score` now supports the
  multiclass case.

- |Efficiency| The computation of the expected mutual information in

  unique labels is large and its memory usage is reduced in general.

- |Enhancement| :class:`metrics.silhouette_samples` nows accepts a sparse
  matrix of pairwise distances between samples, or a feature array.

- |Enhancement| A new parameter `drop_intermediate` was added to

  which drops some suboptimal thresholds to create lighter precision-recall
  curves.

- |Enhancement| :meth:`metrics.RocCurveDisplay.from_estimator` and

  `plot_chance_level` and `chance_level_kw` to plot the baseline chance
  level. This line is exposed in the `chance_level_` attribute.

- |Enhancement| :meth:`metrics.PrecisionRecallDisplay.from_estimator` and

  keywords, `plot_chance_level` and `chance_level_kw` to plot the baseline
  chance level. This line is exposed in the `chance_level_` attribute.

- |Fix| :func:`metrics.manhattan_distances` now supports readonly sparse datasets.

- |Fix| Fixed :func:`metrics.classification_report` so that empty input will return
  `np.nan`. Previously, "macro avg" and `weighted avg` would return
  e.g. `f1-score=np.nan` and `f1-score=0.0`, being inconsistent. Now, they
  both return `np.nan`.

- |Fix| :func:`metrics.ndcg_score` now gives a meaningful error message for input of
  length 1.

- |Fix| :func:`metrics.log_loss` raises a warning if the values of the parameter
  `y_pred` are not normalized, instead of actually normalizing them in the metric.
  Starting from 1.5 this will raise an error.

- |Fix| In :func:`metrics.roc_curve`, use the threshold value `np.inf` instead of
  arbitrary `max(y_score) + 1`. This threshold is associated with the ROC curve point
  `tpr=0` and `fpr=0`.

- |Fix| The `'matching'` metric has been removed when using SciPy>=1.9
  to be consistent with `scipy.spatial.distance` which does not support
  `'matching'` anymore.

- |API| The `eps` parameter of the :func:`metrics.log_loss` has been deprecated and
  will be removed in 1.5. :pr:`25299` by :user:`Omar Salman <OmarManzoor>`.

...............................

- |Fix| :class:`gaussian_process.GaussianProcessRegressor` has a new argument
  `n_targets`, which is used to decide the number of outputs when sampling
  from the prior distributions. :pr:`23099` by :user:`Zhehao Liu <MaxwellLZH>`.

..............................

- |MajorFeature| Added the class :class:`model_selection.ValidationCurveDisplay`
  that allows easy plotting of validation curves obtained by the function

- |API| The parameter `log_scale` in the class

  will be removed in 1.5. The default scale can be overriden by setting it
  directly on the `ax` object and will be set automatically from the spacing
  of the data points otherwise.

- |Enhancement| :func:`model_selection.cross_validate` accepts a new parameter
  `return_indices` to return the train-test indices of each cv split.

..........................

- |Fix| :func:`getattr` on :meth:`multioutput.MultiOutputRegressor.partial_fit`
  and :meth:`multioutput.MultiOutputClassifier.partial_fit` now correctly raise
  an `AttributeError` if done before calling `fit`. :pr:`26333` by `Adrin
  Jalali`_.

..........................

- |Fix| :class:`naive_bayes.GaussianNB` does not raise anymore a `ZeroDivisionError`
  when the provided `sample_weight` reduces the problem to a single class in `fit`.

........................

- |Enhancement| The performance of :meth:`neighbors.KNeighborsClassifier.predict`
  and of :meth:`neighbors.KNeighborsClassifier.predict_proba` has been improved
  when `n_neighbors` is large and `algorithm="brute"` with non Euclidean metrics.

- |Fix| Remove support for `KulsinskiDistance` in :class:`neighbors.BallTree`. This
  dissimilarity is not a metric and cannot be supported by the BallTree.

- |API| The support for metrics other than `euclidean` and `manhattan` and for
  callables in :class:`neighbors.NearestNeighbors` is deprecated and will be removed in
  version 1.5. :pr:`24083` by :user:`Valentin Laurent <Valentin-Laurent>`.

.............................

- |Fix| :class:`neural_network.MLPRegressor` and :class:`neural_network.MLPClassifier`
  reports the right `n_iter_` when `warm_start=True`. It corresponds to the number
  of iterations performed on the current call to `fit` instead of the total number
  of iterations performed since the initialization of the estimator.

.......................

- |Feature| :class:`pipeline.FeatureUnion` can now use indexing notation (e.g.
  `feature_union["scalar"]`) to access transformers by name. :pr:`25093` by
  `Thomas Fan`_.

- |Feature| :class:`pipeline.FeatureUnion` can now access the
  `feature_names_in_` attribute if the `X` value seen during `.fit` has a
  `columns` attribute and all columns are strings. e.g. when `X` is a
  `pandas.DataFrame`

- |Fix| :meth:`pipeline.Pipeline.fit_transform` now raises an `AttributeError`
  if the last step of the pipeline does not support `fit_transform`.

............................

- |MajorFeature| Introduces :class:`preprocessing.TargetEncoder` which is a
  categorical encoding based on target mean conditioned on the value of the
  category. :pr:`25334` by `Thomas Fan`_.

- |Feature| :class:`preprocessing.OrdinalEncoder` now supports grouping
  infrequent categories into a single feature. Grouping infrequent categories
  is enabled by specifying how to select infrequent categories with
  `min_frequency` or `max_categories`. :pr:`25677` by `Thomas Fan`_.

- |Enhancement| :class:`preprocessing.PolynomialFeatures` now calculates the
  number of expanded terms a-priori when dealing with sparse `csr` matrices
  in order to optimize the choice of `dtype` for `indices` and `indptr`. It
  can now output `csr` matrices with `np.int32` `indices/indptr` components
  when there are few enough elements, and will automatically use `np.int64`
  for sufficiently large matrices.

- |Enhancement| A new parameter `sparse_output` was added to

  `sparse_output=True`, :class:`preprocessing.SplineTransformer` returns a sparse
  CSR matrix. :pr:`24145` by :user:`Christian Lorentzen <lorentzenchr>`.

- |Enhancement| Adds a `feature_name_combiner` parameter to

  feature names to be returned by :meth:`get_feature_names_out`.
  The callable combines input arguments `(input_feature, category)` to a string.

- |Enhancement| Added support for `sample_weight` in

  `sample_weight` for each sample to be used while fitting. The option is only
  available when `strategy` is set to `quantile` and `kmeans`.

- |Enhancement| Subsampling through the `subsample` parameter can now be used in

- |Fix| :class:`preprocessing.AdditiveChi2Sampler` is now stateless.
  The `sample_interval_` attribute is deprecated and will be removed in 1.5.

- |Fix| :class:`preprocessing.PowerTransformer` now correctly preserves the Pandas
  Index when the `set_config(transform_output="pandas")`. :pr:`26454` by `Thomas Fan`_.

- |Fix| :class:`preprocessing.PowerTransformer` now correcly raises error when
  using `method="box-cox"` on data with a constant `np.nan` column.

- |Fix| :class:`preprocessing.PowerTransformer` with `method="yeo-johnson"` now leaves
  constant features unchanged instead of transforming with an arbitrary value for
  the `lambdas_` fitted parameter.

- |API| The default value of the `subsample` parameter of

  version 1.5 when `strategy="kmeans"` or `strategy="uniform"`.

..................

- |API| `dual` parameter now accepts `auto` option for

...................

- |MajorFeature| :class:`tree.DecisionTreeRegressor` and

  `splitter='best'` and criterion is `gini`, `entropy`, or `log_loss`,
  for classification or `squared_error`, `friedman_mse`, or `poisson`
  for regression. :pr:`23595`, :pr:`26376` by `Thomas Fan`_.

- |Enhancement| Adds a `class_names` parameter to

  for each target class in ascending numerical order.

- |Fix| :func:`tree.export_graphviz` and :func:`tree.export_text` now accepts
  `feature_names` and `class_names` as array-like rather than lists.

....................

- |FIX| Fixes :func:`utils.validation.check_array` to properly convert pandas
  extension arrays. :pr:`25813` and :pr:`26106` by `Thomas Fan`_.

- |Fix| :func:`utils.validation.check_array` now supports pandas DataFrames with
  extension arrays and object dtypes by return an ndarray with object dtype.

- |API| :func:`utils.estimator_checks.check_transformers_unfitted_stateless` has been
  introduced to ensure stateless transformers don't raise `NotFittedError`
  during `transform` with no prior call to `fit` or `fit_transform`.

- |API| A `FutureWarning` is now raised when instantiating a class which inherits from
  a deprecated base class (i.e. decorated by :class:`utils.deprecated`) and which
  overrides the `__init__` method.

..............................

- |Enhancement| :meth:`semi_supervised.LabelSpreading.fit` and

Miscellaneous
.............

- |Enhancement| Replace obsolete exceptions `EnvironmentError`, `IOError` and
  `WindowsError`.

Code and Documentation Contributors
-----------------------------------

Thanks to everyone who has contributed to the maintenance and improvement of
the project since version 1.2, including:

2357juan, Abhishek Singh Kushwah, Adam Handke, Adam Kania, Adam Li, adienes,
Admir Demiraj, adoublet, Adrin Jalali, A.H.Mansouri, Ahmedbgh, Ala-Na, Alex
Buzenet, AlexL, Ali H. El-Kassas, amay, András Simon, André Pedersen, Andrew
Wang, Ankur Singh, annegnx, Ansam Zedan, Anthony22-dev, Artur Hermano, Arturo
Amor, as-90, ashah002, Ashish Dutt, Ashwin Mathur, AymericBasset, Azaria
Gebremichael, Barata Tripramudya Onggo, Benedek Harsanyi, Benjamin Bossan,
Bharat Raghunathan, Binesh Bannerjee, Boris Feld, Brendan Lu, Brevin Kunde,
cache-missing, Camille Troillard, Carla J, carlo, Carlo Lemos, c-git, Changyao
Chen, Chiara Marmo, Christian Lorentzen, Christian Veenhuis, Christine P. Chai,
crispinlogan, Da-Lan, DanGonite57, Dave Berenbaum, davidblnc, david-cortes,
Dayne, Dea María Léon, Denis, Dimitri Papadopoulos Orfanos, Dimitris
Litsidis, Dmitry Nesterov, Dominic Fox, Dominik Prodinger, Edern, Ekaterina
Butyugina, Elabonga Atuo, Emir, farhan khan, Felipe Siola, futurewarning, Gael
Varoquaux, genvalen, Gleb Levitski, Guillaume Lemaitre, gunesbayir, Haesun
Park, hujiahong726, i-aki-y, Ian Thompson, Ido M, Ily, Irene, Jack McIvor,
jakirkham, James Dean, JanFidor, Jarrod Millman, JB Mountford, Jérémie du
Boisberranger, Jessicakk0711, Jiawei Zhang, Joey Ortiz, JohnathanPi, John
Pangas, Joshua Choo Yun Keat, Joshua Hedlund, JuliaSchoepp, Julien Jerphanion,
jygerardy, ka00ri, Kaushik Amar Das, Kento Nozawa, Kian Eliasi, Kilian Kluge,
Lene Preuss, Linus, Logan Thomas, Loic Esteve, Louis Fouquet, Lucy Liu, Madhura
Jayaratne, Marc Torrellas Socastro, Maren Westermann, Mario Kostelac, Mark
Harfouche, Marko Toplak, Marvin Krawutschke, Masanori Kanazu, mathurinm, Matt
Haberland, Max Halford, maximeSaur, Maxwell Liu, m. bou, mdarii, Meekail Zain,
Mikhail Iljin, murezzda, Nawazish Alam, Nicola Fanelli, Nightwalkx, Nikolay
Petrov, Nishu Choudhary, NNLNR, npache, Olivier Grisel, Omar Salman, ouss1508,
PAB, Pandata, partev, Peter Piontek, Phil, pnucci, Pooja M, Pooja Subramaniam,
precondition, Quentin Barthélemy, Rafal Wojdyla, Raghuveer Bhat, Rahil Parikh,
Ralf Gommers, ram vikram singh, Rushil Desai, Sadra Barikbin, SANJAI_3, Sashka
Warner, Scott Gigante, Scott Gustafson, searchforpassion, Seoeun
Hong, Shady el Gewily, Shiva chauhan, Shogo Hida, Shreesha Kumar Bhat, sonnivs,
Sortofamudkip, Stanislav (Stanley) Modrak, Stefanie Senger, Steven Van
Vaerenbergh, Tabea Kossen, Théophile Baranger, Thijs van Weezel, Thomas A
Caswell, Thomas Germer, Thomas J. Fan, Tim Head, Tim P, Tom Dupré la Tour,
tomiock, tspeng, Valentin Laurent, Veghit, VIGNESH D, Vijeth Moudgalya, Vinayak
Mehta, Vincent M, Vincent-violet, Vyom Pathak, William M, windiana42, Xiao
Yuan, Yao Xiao, Yaroslav Halchenko, Yotam Avidar-Constantini, Yuchen Zhou,
Yusuf Raji, zeeshan lone
